--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beanstalk-ui",
+  "name": "ui",
   "version": "2.0.33",
   "private": true,
   "homepage": "https://app.bean.money",
@@ -132,8 +132,7 @@
     "generate:graphql": "echo \"Generating: graphql-codegen\" && graphql-codegen --config codegen.yml",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "postpack": "yarn generate",
-    "postinstall": "husky install"
+    "postpack": "yarn generate"
   },
   "engines": {
     "node": ">=14"
